; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/mm/extr_dump_pagetables.c_note_wx.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/mm/extr_dump_pagetables.c_note_wx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pg_state = type { i64, i64, i64 }

@PAGE_SIZE = common dso_local global i64 0, align 8
@__supported_pte_mask = common dso_local global i32 0, align 4
@_PAGE_NX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"x86/mm: Found insecure W+X mapping at address %pS\0A\00", align 1
@BIOS_BEGIN = common dso_local global i64 0, align 8
@BIOS_END = common dso_local global i64 0, align 8
@PAGE_OFFSET = common dso_local global i64 0, align 8
@pcibios_enabled = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pg_state*)* @note_wx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @note_wx(%struct.pg_state* %0) #0 {
  %2 = alloca %struct.pg_state*, align 8
  %3 = alloca i64, align 8
  store %struct.pg_state* %0, %struct.pg_state** %2, align 8
  %4 = load %struct.pg_state*, %struct.pg_state** %2, align 8
  %5 = getelementptr inbounds %struct.pg_state, %struct.pg_state* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.pg_state*, %struct.pg_state** %2, align 8
  %8 = getelementptr inbounds %struct.pg_state, %struct.pg_state* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = sub i64 %6, %9
  %11 = load i64, i64* @PAGE_SIZE, align 8
  %12 = udiv i64 %10, %11
  store i64 %12, i64* %3, align 8
  %13 = load i64, i64* %3, align 8
  %14 = load %struct.pg_state*, %struct.pg_state** %2, align 8
  %15 = getelementptr inbounds %struct.pg_state, %struct.pg_state* %14, i32 0, i32 2
  %16 = load i64, i64* %15, align 8
  %17 = add i64 %16, %13
  store i64 %17, i64* %15, align 8
  %18 = load i32, i32* @__supported_pte_mask, align 4
  %19 = load i32, i32* @_PAGE_NX, align 4
  %20 = and i32 %18, %19
  %21 = load %struct.pg_state*, %struct.pg_state** %2, align 8
  %22 = getelementptr inbounds %struct.pg_state, %struct.pg_state* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = inttoptr i64 %23 to i8*
  %25 = call i32 @WARN_ONCE(i32 %20, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i8* %24)
  ret void
}

declare dso_local i32 @WARN_ONCE(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
